option(
  'target',
  type: 'combo',
  choices: [
    'sim-verilator',
    'fpga',
    'undef',
  ],
  value: 'undef',
)

option(
  'dev_bin_dir',
  type: 'string',
  value: 'undef',
)

option(
  'host_bin_dir',
  type: 'string',
  value: 'undef',
)

option(
  'ot_version',
  type: 'string',
  value: 'undef',
)
