option(
  'dev_bin_dir',
  type: 'string',
  value: 'undef',
)

option(
  'host_bin_dir',
  type: 'string',
  value: 'undef',
)

option(
  'ot_version',
  type: 'string',
  value: 'undef',
)

option(
  'tock_local',
  type: 'boolean',
  value: false,
)

option(
  'keep_includes',
  type: 'boolean',
  value: true,
)
