# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "opentitan"
version = "0.0.0"
description = "Open-source hardware root-of-trust"
requires-python = ">=3.8.1"

dependencies = [
  # Dependency management
  "uv==0.4.10",

  # Polyfill library
  "importlib-resources ~= 5.12", # Need for Python<3.9
  # This are condition dependency of importlib-resources
  # Add it here otherwise it'll get dropped when uv/pip tries to lock dependency with Python>=3.10.
  "zipp ~= 3.16", # Need for Python<3.10

  # Keep sorted
  "beautifulsoup4==4.12.2",
  "hjson==3.1.0",
  "libclang==16.0.0",
  "libcst == 1.1.0", # 1.2.0+ needs Python 3.9+
  "lxml ~= 5.0",
  "mako ~= 1.2.2",
  "ninja==1.11.1.1",
  "pluralizer==1.2.0",
  "pycryptodome ~= 3.19.1",
  "pyelftools==0.29",
  "pytest-timeout==2.1.0",
  "pytest ~= 7.2",
  "pyyaml ~= 6.0.2",
  "rich==12.6.0", # maximum version compatible with Python 3.6.8 (used on CentOS7 nightly regression machines)
  "semantic_version==2.10.0",
  "tabulate==0.8.10",
  "typer==0.6.1",

  # Dependencies: bitstreams cache
  "jsonschema==4.17.3",
  # These are conditional dependency of jsonschema when Python<3.9.
  # Add them here otherwise they'll get dropped when uv/pip tries to lock dependency with Python>=3.9.
  "pkgutil_resolve_name==1.3.10",

  # Dependencies: gen-flash-img.py
  "pyfinite==1.9.1",

  # Dependencies: dv_sim
  "enlighten==1.10.2",
  "mistletoe==0.9.0",
  # Premailer 3.9.0 broke the API by introducing an allow_loading_external_files
  # argument that is now mandatory, but didn't exist in previous versions.
  # To relax the constraint we either need to do a runtime detection, or switch all
  # users to a newer version.
  "premailer==3.8.0",

  # Dependencies: check_dif_statuses.py
  "pydriller ~= 2.7",
  "termcolor==1.1.0",

  # Linters
  "flake8 ~= 7.1",
  "isort==5.10.1",
  "mypy==0.971",
  "yapf==0.32.0",

  # Type stubs for mypy checking.
  "types-pyyaml==6.0.11",
  "types-tabulate==0.8.11",

  # Dependency of sw/host/vendor/google_verible_verilog_syntax_py
  "anytree==2.8.0",

  # Dependency of third_party/tock
  "tockloader==1.13",

  # Development version with OT-specific changes
  "fusesoc@https://github.com/lowRISC/fusesoc/archive/refs/tags/ot-0.5.dev0.zip",

  # Development version with OT-specific changes
  "edalize@https://github.com/lowRISC/edalize/archive/refs/tags/v0.4.0.zip",

  # Development version of minimal ChipWhisperer toolchain with latest features
  # and bug fixes. We fix the version for improved stability and manually update
  # if necessary.
  "chipwhisperer@https://github.com/newaetech/chipwhisperer-minimal/archive/2643131b71e528791446ee1bab7359120288f4ab.zip",
]

[tool.setuptools]
# This is actually not a python project, we just use pyproject.toml to manage dependencies.
py-modules = []

[tool.ruff]
target-version = "py38"
line-length = 100
extend-exclude = [
  # Don't lint vendored files which must be fixed upstream.
  "*vendor*",
  # Files and directories that currently fail linting. Anyone is welcome to resolve issues
  # in these files and remove them from the list. Please do not add to it unless necessary.
  "ci/scripts/**/*.py",
  "hw/check_tool_requirements.py",
  "hw/dv/tools/ralgen/ralgen.py",
  "hw/formal/tools/csr_assert_gen/*.py",
  "hw/formal/tools/jaspergold/*.py",
  "hw/formal/tools/vcformal/*.py",
  "hw/ip/aes/pre_dv/aes_sbox_lec/*.py",
  "hw/ip/aes/pre_sca/alma_post_syn/*.py",
  "hw/*/ip_autogen/pwrmgr/util/reg_pwrmgr.py",
  "hw/ip/hmac/model/hmac_model.py",
  "hw/ip/otbn/dv/otbnsim/**/*.py",
  "hw/ip/otbn/dv/rig/rig/**.py",
  "hw/ip/otbn/dv/uvm/gen-binaries.py",
  "hw/ip/otbn/dv/verilator/run-some.py",
  "hw/ip/otbn/util/**.py",
  "hw/ip/prim/pre_dv/prim_crc32/expected_out.py",
  "hw/ip/prim/util/**.py",
  "hw/ip/rom_ctrl/util/*.py",
  "hw/ip/rv_timer/util/*.py",
  "hw/ip_templates/pwrmgr/util/reg_pwrmgr.py",
  "hw/syn/tools/dc/*.py",
  "hw/tool_requirements.py",
  "hw/top_englishbreakfast/util/prepare_sw.py",
  "rules/scripts/bitstreams_workspace*.py",
  "rules/scripts/clang_tidy.py",
  "sw/device/examples/teacup_demos/data/c-array-bitmap-generator.py",
  "sw/device/silicon_creator/lib/sigverify/**/*.py",
  "sw/device/tests/crypto/*.py",
  "sw/device/tests/crypto/testvectors/**/*.py",
  "sw/device/tests/otbn_data/otbn_test_params.py",
  "sw/host/cryptotest/testvectors/parsers/*.py",
  "sw/host/hsmtool/scripts/pkcs11_consts.py",
  "sw/host/tests/manuf/manuf_cp_device_info_flash_wr/gen_test_exit_token.py",
  "sw/host/tests/manuf/manuf_cp_test_lock/gen_test_unlock_token.py",
  "sw/host/tests/rom/e2e_bootstrap_rma/gen_rma_token.py",
  "sw/otbn/crypto/tests/generated/*.py",
  "util/autogen_banner.py",
  "util/autogen_dif.py",
  "util/autogen_testutils/*.py",
  "util/cmdgen.py",
  "util/coverage/*.py",
  "util/dashboard/*.py",
  "util/design/**/*.py",
  "util/device_sw_utils/*.py",
  "util/diff_generated_util_output.py",
  "util/dtgen/*.py",
  "util/dttool.py",
  "util/dvsim/*.py",
  "util/fix_include_guard.py",
  "util/fix_trailing_whitespace.py",
  "util/fpga/*.py",
  "util/fpvgen.py",
  "util/fpvgen/*.py",
  "util/fusesoc_build.py",
  "util/gen_doc_hw_summary_table.py",
  "util/generate_compilation_db*.py",
  "util/gen_testutils.py",
  "util/get-toolchain.py",
  "util/i2csvg.py",
  "util/i2csvg/*.py",
  "util/ipgen.py",
  "util/ipgen/**/*.py",
  "util/lint_commits.py",
  "util/lintpy.py",
  "util/make_new_dif.py",
  "util/make_new_dif/*.py",
  "util/mdbook/*.py",
  "util/mdbook_*.py",
  "util/otbn_build.py",
  "util/py/**/*.py",
  "util/raclgen.py",
  "util/raclgen/*.py",
  "util/reggen/*.py",
  "util/regtool.py",
  "util/repo_top.py",
  "util/rom_chip_info*.py",
  "util/run_manual_tests.py",
  "util/selfdoc.py",
  "util/serialize/*.py",
  "util/site/*.py",
  "util/test_reggen/*.py",
  "util/tlgen.py",
  "util/tlgen/*.py",
  "util/topgen.py",
  "util/topgen/*.py",
  "util/uvmdvgen/*.py",
  "util/validate_testplans.py",
  "util/vendor.py",
  "util/verible-format.py",
  "util/version_file.py",
]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["ALL", "E303", "W391"]
